force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c/MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c.object-meta.xml
<CustomObject>
    <label>関連FAQ</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>関連FAQ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>