force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c/fields/MELCRMOPETOOL__Faq__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Faq__c</fullName>
    <label>FAQ</label>
    <referenceTo>MELCRMOPETOOL__MELGITCRM_Faq__c</referenceTo>
    <relationshipLabel>関連問い合わせ</relationshipLabel>
    <relationshipName>Faqs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>