force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c/fields/MELCRMOPETOOL__Inquiry__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Inquiry__c</fullName>
    <label>問い合わせ</label>
    <referenceTo>MELCRMOPETOOL__MELGITCRM_Inquiry__c</referenceTo>
    <relationshipLabel>関連FAQ</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>