force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c/fields/MELCRMOPETOOL__Title__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Title__c</fullName>
    <formula>MELCRMOPETOOL__Faq__r.MELCRMOPETOOL__Title__c</formula>
    <label>件名</label>
    <type>Text</type>
</CustomField>